--- a/FutbolBrasil/web/app/views/wap/mtm.scala.html
+++ b/FutbolBrasil/web/app/views/wap/mtm.scala.html
@@ -1,9 +1,10 @@
-@(HD: models.wap.HandsetDetection)(jResponse: com.fasterxml.jackson.databind.JsonNode)(idCompetition: Integer)(nameCompetition: String)(idMatch: Integer) @if(HD.getLevelSupport() ==  models.wap.HandsetDetection.XHTML_SIMPLE){@xml}
-@xml = {<?xml version="1.0" encoding="UTF-8"?>}
+@(HD: models.wap.HandsetDetection)(jResponse: com.fasterxml.jackson.databind.JsonNode)(idCompetition: Integer)(nameCompetition: String)(idMatch: Integer)
 
-@if(HD.getLevelSupport() ==  models.wap.HandsetDetection.HTML4) {
 
-    @html4("html4"){
+@if(HD.getLevelSupport() < models.wap.HandsetDetection.HTML) {
+} else {
+
+    @html4{
 
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
@@ -84,6 +85,4 @@
 
     }
 
-} else {
-    HTML5
 }
