--- a/FutbolBrasil/web/app/views/wap/html4.scala.html
+++ b/FutbolBrasil/web/app/views/wap/html4.scala.html
@@ -1,7 +1,7 @@
-@(title: String)(content: Html)
+@(content: Html)
+@import play.i18n._
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
-@import play.i18n._
 @menu = {
     <div class="row">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 option">
@@ -21,7 +21,7 @@
 
 <html>
     <head>
-        <title>@title</title>
+        <title>@Messages.get("APP_TITLE")</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.at("stylesheets/wap/main.css")'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
