EXTREMA_SPORTS: Admin

--- a/ExtremeSports/server/ExtremeSports/app/views/index.scala.html
+++ b/ExtremeSports/server/ExtremeSports/app/views/index.scala.html
@@ -1,7 +1,18 @@
 @(message: String)
 
-@main("Welcome to Play") {
 
-    @play20.welcome(message, style = "Java")
+@main("Extreme Sports") {
+
+    <div class="bs-docs-section">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Extreme Sports</h2>
+            </div>
+        </div>
+
+    </div>
+
+
 
 }
