FUTBOL BRASIL:  - Agregando Update Service

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/update-modal.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/update-modal.html
@@ -2,12 +2,12 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" ng-bind="updateInfo.title"></h4>
+                <h4 class="modal-title" ng-bind="$root.updateInfo.title"></h4>
             </div>
-            <div class="modal-body" ng-bind-html="updateInfo.html"></div>
+            <div class="modal-body" ng-bind-html="$root.updateInfo.html"></div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
-                        data-dismiss="modal" ng-if="!updateInfo.mandatory">Close</button>
+                        data-dismiss="modal" ng-if="!$root.updateInfo.mandatory">Close</button>
                 <button type="button" class="btn btn-primary" ng-click="goToStore()">Update</button>
             </div>
         </div>
