--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -1,7 +1,6 @@
-<div id="wrapper" class="full-wrapper" style="top: 50px; background-color: transparent">
+<div id="wrapper" class="wrapper wrapper-full" style="background-color: transparent">
     <div class="scroller" style="background-color: transparent">
         <div class="row">
-            <!--<div class="col-xs-10 col-xs-offset-1 text-center">-->
             <div class="col-xs-12">
                 <div class="well text-center">
                     <img src="img/logo.png" style="margin: 8px;">
