FUTBOL BRASIL:  - Más fixes de CSS - Cambios en funcionalidad de notificación de errores

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/info-modal.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/info-modal.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" ng-bind="displayInfo.title"></h4>
+                <h4 class="modal-title"><i ng-class="displayInfo.icon"></i> {{displayInfo.title}}</h4>
             </div>
             <div class="modal-body" ng-bind-html="displayInfo.html"></div>
             <div class="modal-footer">
