--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 
-<div id="wrapper" class="wrapper wrapper-full">
+<div id="wrapper" class="wrapper wrapper-row">
     <div class="scroller">
         <div class="container">
             <div class="row" ng-show="hasNews">
