--- a/ExtremeSports/server/ExtremeSports/app/views/categories/list.scala.html
+++ b/ExtremeSports/server/ExtremeSports/app/views/categories/list.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: com.avaje.ebean.Page[models.content.posts.Category], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean)
+@(currentPage: com.avaje.ebean.Page[models.content.posts.Category], currentSortBy: String, currentOrder: String, currentFilter: String, sortView: Boolean, categories: Boolean)
 
 @****************************************
 * Helper generating navigation links    *
@@ -22,7 +22,7 @@
     }
 
     // Generate the link
-    controllers.routes.CategoriesView.list(newPage, sortBy, order, currentFilter)
+    controllers.routes.CategoriesView.list(categories, newPage, sortBy, order, currentFilter)
 
 }
 
@@ -37,12 +37,12 @@
 
 @title = {}
 
-@main(title = Messages("categories.list.head"), nav = "") {
+@main(title =  Messages(if(categories) "categories.list.head" else "tags.list.head"), nav = "") {
     <div class="bs-docs-section">
 
         <div class="row">
             <div class="col-lg-12">
-                <h1 id="homeTitle">@Messages("categories.list.title", currentPage.getTotalRowCount)</h1>
+                <h1 id="homeTitle">@Messages(if(categories)"categories.list.title" else "tags.list.title", currentPage.getTotalRowCount)</h1>
             </div>
         </div>
 
@@ -61,16 +61,17 @@
             <form action='@link(0, "name")' method="GET">
 
                 @if(!sortView) {
-                <div class="col-lg-6">
-                    <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("categories.list.filter.name")>
-                </div>
-                <div class="col-lg-6">
-                    <input type="submit" id="searchsubmit" value=@Messages("categories.list.filter.name") class="btn btn-info">
-                </div>
+                    <div class="col-lg-6">
+                        <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("categories.list.filter.name")>
+                    </div>
+                        <input type="hidden" class="form-control floating-label" id="category" name="categories" value="@categories" placeholder="">
+                    <div class="col-lg-6">
+                        <input type="submit" id="searchsubmit" value=@Messages("categories.list.filter.name") class="btn btn-info">
+                    </div>
                 }
 
                 @if(sortView) {
-                <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/categories/sort/" >@Messages("generic.list.apply")</a>
+                    <a class="btn success" id="ajax" href="#" data-url="/api/v1/categories/sort/" >@Messages("generic.list.apply")</a>
                 }
 
             </form>
@@ -89,7 +90,7 @@
                         <div class="list-group">
                             @for((category, index) <-  currentPage.getList().zipWithIndex) {
                             <div class="list-group-item">
-                                <a href="@controllers.routes.CategoriesView.edit(category.getIdCategory())">
+                                <a href="@controllers.routes.CategoriesView.edit(category.getIdCategory(), categories)">
                                     <div class="row-content">
                                         <h4 class="list-group-item-heading">@Html(""+category.getIdCategory()) - @Html(category.getName())</h4>
                                     </div>
@@ -143,7 +144,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <a href="@controllers.routes.CategoriesView.blank" class="btn btn-primary">@Messages("categories.list.new")</a>
+                <a href="@controllers.routes.CategoriesView.blank(categories)" class="btn btn-primary">@Messages(if(categories) "categories.list.new" else "tags.list.new")</a>
             </div>
         </div>
 
