FUTBOL BRASIL:  - Login y Remind i18n-alizados y con mensajes de error de red manejados con notificaciones

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -7,24 +7,24 @@
                     <form name="msisdnForm" ng-submit="doMsisdnLogin()" class="form-horizontal">
                         <fieldset>
                             <div class="form-group">
-                                <label for="msisdnInput" class="col-xs-2 control-label" ng-bind="strings.MSISDN_LABEL"></label>
+                                <label for="msisdnInput" class="col-xs-2 control-label" translate>LOGIN.MSISDN_LABEL</label>
                                 <div class="col-xs-9 col-xs-push-1">
                                     <div class="input-group">
                                         <span class="input-group-addon">+58</span>
                                         <label for="msisdnInput" class="col-xs-2 control-label sr-only"
-                                               ng-bind="strings.MSISDN_LABEL"></label>
+                                               translate>LOGIN.MSISDN_LABEL</label>
                                         <input type="tel" class="form-control empty" ng-model="msisdn"
-                                               id="msisdnInput" placeholder="{{strings.MSISDN_HOLDER}}">
+                                               id="msisdnInput" placeholder="{{ 'LOGIN.MSISDN_HOLDER' | translate }}">
                                         <span class="material-input"></span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label for="passwordInput" class="col-xs-2 control-label" ng-bind="strings.PASSWORD_LABEL"></label>
+                                <label for="passwordInput" class="col-xs-2 control-label" translate>LOGIN.PASSWORD_LABEL</label>
                                 <div class="col-xs-9 col-xs-push-1">
                                     <input type="password" class="form-control empty" ng-model="password"
-                                           id="passwordInput" placeholder="{{strings.PASSWORD_HELPER}}">
+                                           id="passwordInput" placeholder="{{ 'LOGIN.PASSWORD_HELPER' | translate }}">
                                     <span class="material-input"></span>
                                 </div>
                             </div>
@@ -34,7 +34,7 @@
                                     <button type="submit" class="btn btn-block btn-orange touch-enable">
                                         <div class="row">
                                             <div class="col-xs-10">
-                                                <span>{{strings.LOGIN_LABEL}} </span>
+                                                <span translate>LOGIN.LOGIN_LABEL</span>
                                             </div>
                                             <div class="col-xs-2 text-right">
                                                 <span><i class="mdi-navigation-chevron-right"></i></span>
@@ -50,7 +50,7 @@
                     <div class="list-group">
                         <a ui-sref="remind" class="list-group-item list-item">
                             <div class="col-xs-10">
-                                <span>{{strings.REMIND_LABEL}}</span>
+                                <span translate>LOGIN.REMIND_LABEL</span>
                             </div>
                             <div class="col-xs-2 text-right">
                                 <span><i class="mdi-navigation-chevron-right"></i></span>
@@ -59,7 +59,7 @@
                         <div class="full-separator"></div>
                         <a ui-sref="language-selection" class="list-group-item list-item">
                             <div class="col-xs-10">
-                                <span>{{strings.CHANGE_LANGUAGE_LABEL}}</span>
+                                <span translate>LOGIN.CHANGE_LANGUAGE_LABEL</span>
                             </div>
                             <div class="col-xs-2 text-right">
                                 <span><i class="mdi-navigation-chevron-right"></i></span>
@@ -68,7 +68,7 @@
                         <div class="full-separator"></div>
                         <a ui-sref="login" class="list-group-item list-item">
                             <div class="col-xs-10">
-                                <span>{{strings.TUTORIAL_LABEL}}</span>
+                                <span translate>LOGIN.TUTORIAL_LABEL</span>
                             </div>
                             <div class="col-xs-2 text-right">
                                 <span><i class="mdi-navigation-chevron-right"></i></span>
@@ -83,7 +83,7 @@
                                     <button type="submit" class="btn btn-block btn-orange touch-enable">
                                         <div class="row">
                                             <div class="col-xs-10">
-                                                <span>{{strings.ENTER_AS_GUEST_LABEL}} </span>
+                                                <span translate>LOGIN.ENTER_AS_GUEST_LABEL</span>
                                             </div>
                                             <div class="col-xs-2 text-right">
                                                 <span><i class="mdi-navigation-chevron-right"></i></span>
