FUTBOL BRASIL:  - Icono de refresh en MTM ahora gira al refrescar

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -98,7 +98,7 @@
     <div class="row row-header row-header-live">
         <div class="col-xs-12 text-center text-center-vertical">
             <span ng-bind="item.league.name" style="font-size: 1.2em; font-weight: bold;"></span>
-            <span class="section-refresh" ng-click="refreshEvents()">
+            <span class="section-refresh" ng-class="refreshIconClass" ng-click="refreshEvents()">
                 <i class="icon mdi-navigation-refresh"></i>
             </span>
         </div>
