--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/info-modal.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/info-modal.html
@@ -2,9 +2,9 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title"><i ng-class="displayInfo.icon"></i> {{displayInfo.title}}</h4>
+                <h4 class="modal-title"><i ng-class="$root.displayInfo.icon"></i> {{$root.displayInfo.title}}</h4>
             </div>
-            <div class="modal-body" ng-bind-html="displayInfo.html"></div>
+            <div class="modal-body" ng-bind-html="$root.displayInfo.html"></div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
