--- a/FutbolBrasil/web/app/views/wap/login.scala.html
+++ b/FutbolBrasil/web/app/views/wap/login.scala.html
@@ -9,24 +9,33 @@
 
             <h4>@Messages.get("LOGIN_TITLE")</h4>
             <h5>@Messages.get("LOGIN_TITLE_MSISDN")</h5>
+
+            @if(flash.containsKey("error_msisdn")) {
+                <h6 style="color:red;">@flash.get("error_msisdn")</h6>
+            }
+
             <form  method="post" action="@routes.Wap.getPassword()">
-                <input type="text" name="msisdn" size="10" maxlength="10" /><br /><br/>
+                <input type="text" name="msisdn" size="10" /><br /><br/>
                 <input type="submit" value='@Messages.get("BUTTON_NEXT")' />
             </form>
 
         } else {
 
-            <h5>@Messages.get("LOGIN_TITLE_PASSWORD")</h5>
-            <h3>@(clientForm("msisdn").value)</h3>
+            <h4>@Messages.get("LOGIN_TITLE_PASSWORD")</h4>
+            <h5>@(clientForm("msisdn").value)</h5>
+
+            @if(flash.containsKey("error_password")) {
+                <h6 style="color:red;">@flash.get("error_password")</h6>
+            }
 
             <form id="create" method="post" action="@routes.Wap.createClient()">
-                <input type="hidden" name="msisdn" value='@(clientForm("msisdn").value)' size="10" maxlength="10"  />
-                <input type="password" name="password" size="10" maxlength="10" /><br /><br/>
+                <input type="hidden" name="msisdn" value='@(clientForm("msisdn").value)'  />
+                <input type="password" name="password" size="10" /><br /><br/>
                 <input type="submit" value='@Messages.get("BUTTON_CONFIRM")'>
             </form>
 
             <form id="again" method="post" action="@routes.Wap.getPassword()">
-                <input type="hidden" name="msisdn"  value='@(clientForm("msisdn").value)' />
+                <input type="hidden" name="msisdn" value='@(clientForm("msisdn").value)' />
                 <a href="javascript:document.getElementById('again').submit();">@Messages.get("BUTTON_AGAIN_PASSWORD")</a>
             </form>
         }
@@ -41,12 +50,18 @@
             @if(step == 0) {
 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+
                     <h4>@Messages.get("LOGIN_TITLE")</h4>
                     <h5>@Messages.get("LOGIN_TITLE_MSISDN")</h5>
+
+                    @if(flash.containsKey("error_msisdn")) {
+                        <h6 style="color:red;">@flash.get("error_msisdn")</h6>
+                    }
+
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
                     <form method="post" action="@routes.Wap.getPassword()">
-                        <input type="text" name="msisdn" /><br /><br/>
+                        <input type="text" name="msisdn" size="10" /><br /><br/>
                         <input type="submit" value='@Messages.get("BUTTON_NEXT")' />
                     </form>
                 </div>
@@ -54,17 +69,23 @@
             } else {
 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-                    <h5>@Messages.get("LOGIN_TITLE_PASSWORD")</h5>
-                    <h3>@(clientForm("msisdn").value)</h3>
+
+                    <h4>@Messages.get("LOGIN_TITLE_PASSWORD")</h4>
+                    <h5>@(clientForm("msisdn").value)</h5>
+
+                    @if(flash.containsKey("error_password")) {
+                        <h6 style="color:red;">@flash.get("error_password")</h6>
+                    }
+
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
                     <form id="create" method="post" action="@routes.Wap.createClient()">
-                        <input type="hidden" name="msisdn" value='@(clientForm("msisdn").value)'  />
-                        <input type="password" name="password" /><br /><br/>
+                        <input type="hidden" name="msisdn" value='@(clientForm("msisdn").value)'   />
+                        <input type="password" name="password" size="10" /><br /><br/>
                         <input type="submit" value='@Messages.get("BUTTON_CONFIRM")'>
                     </form>
                     <form id="again" method="post" action="@routes.Wap.getPassword()">
-                        <input type="hidden" name="msisdn"  value='@(clientForm("msisdn").value)' />
+                        <input type="hidden" name="msisdn" value='@(clientForm("msisdn").value)' />
                         <a href="javascript:document.getElementById('again').submit();">@Messages.get("BUTTON_AGAIN_PASSWORD")</a>
                     </form>
                 </div>
