--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -2,92 +2,97 @@
     <div id="scroller" ng-style="getTotalWidth()">
         <ul>
             <li ng-style="getWidth()" ng-repeat="league in leagues track by league.id_competitions" >
+                <div class="row row-header">
+                    <div class="col-xs-12">
+                        <div class="row row-header-competition">
+                            <div class="col-xs-4 tabs text-left">
+                                <span ng-bind="leagues[$index-1].name"></span>
+                            </div>
+                            <div class="col-xs-4" ng-click="prevPage($index)">
+                                <span ng-bind="league.name" class="caption"></span>
+                            </div>
+                            <div class="col-xs-4 tabs text-right" ng-click="nextPage($index)">
+                                <span ng-bind="leagues[$index+1].name"></span>
+                            </div>
+                        </div>
 
-              <div class="row row-header">
-                <div class="col-xs-12">
+                        <div class="row row-header-reference">
+                            <div ng-show="league.bet" class="col-xs-12 text-center"
+                                  ng-click="saveBet($index, league.id_competitions)">
+                                <span style="font-size:1.2em;">{{leagues[$index].bet.client_bets}}</span> /
+                                <span style="font-size:1.8em;">{{leagues[$index].bet.total_bets}}</span>
+                                <i class="mdi-file-file-upload" ></i>
+                            </div>
+                        </div>
 
-                  <div class="row row-header-competition">
-
-                    <div class="col-xs-12" ng-click="prevPage($index)">
-                      <span ng-bind="league.name" class="caption"></span>
                     </div>
-
-                    <div class="col-xs-6 tabs  text-left">
-                      <span ng-bind="leagues[$index-1].name"></span>
-                    </div>
-
-                    <div class="col-xs-6 tabs text-right" ng-click="nextPage($index)">
-                      <span ng-bind="leagues[$index+1].name"></span>
-                    </div>
-                  </div>
-
-                  <div class="row row-header-reference">
-                    <div  ng-show="league.bet" class="col-xs-12 text-center"
-                          ng-click="saveBet($index, league.id_competitions)">
-                      <span style="font-size:1.2em;">{{leagues[$index].bet.client_bets}}</span> /
-                      <span style="font-size:1.8em;">{{leagues[$index].bet.total_bets}}</span>
-                      <i class="icon  mdi-file-file-upload" ></i>
-                    </div>
-                  </div>
-
                 </div>
-              </div>
 
-              <div class="row">
-                  <div id="{{vWrapper.getName($index)}}" class="wrapper wrapper-full" style="top:85px;">
-                      <div class="scroller" >
-                          <div class="container">
-                              <div class="col-xs-12" ng-repeat="fixture in league.fixtures track by fixture.date" on-last-repeat>
-                                  <table class="table" >
-                                      <thead>
-                                      <tr>
-                                          <th colspan="3">
-                                              <span ng-bind="getDate(fixture.date)"></span>
-                                          </th>
-                                      </tr>
-                                      </thead>
-                                      <tbody>
+                <div class="row" ng-hide="league.empty">
+                    <div id="{{vWrapper.getName($index)}}" class="wrapper wrapper-full"
+                         style="top:85px !important;">
+                        <div class="scroller" >
+                            <div class="container">
+                                <div class="col-xs-12"
+                                     ng-repeat="fixture in league.fixtures track by fixture.date"
+                                     on-last-repeat>
+                                    <table class="table" >
+                                        <thead>
+                                        <tr>
+                                            <th colspan="3">
+                                                <span ng-bind="getDate(fixture.date)"></span>
+                                            </th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
 
-                                      <tr ng-repeat="match in fixture.matches">
-                                          <td style="width: 33% !important;"
-                                              class= "bet"
-                                              ng-click="setBet(match.status.id_status, 0, $parent.$parent.$index, $parent.$index, $index)"
-                                              ng-class="{active: match.bet.client_bet === 0}">
-                                              <span ng-bind="match.home_team.name"></span>
-                                              <br/>
-                                              <span ng-bind="match.home_team_goals" class="goal"></span>
-                                          </td>
+                                        <tr ng-repeat="match in fixture.matches">
+                                            <td class="col-xs-4 bet"
+                                                ng-click="setBet(match.status.id_status, 0, $parent.$parent.$index, $parent.$index, $index)"
+                                                ng-class="{active: match.bet.client_bet === 0}">
+                                                <span ng-bind="match.home_team.name"></span>
+                                                <br/>
+                                                <span ng-bind="match.home_team_goals" class="goal"></span>
+                                            </td>
 
-                                          <td style="width: 33% !important;"
-                                              class = "bet"
-                                              ng-click="setBet(match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
-                                              ng-class="{active: match.bet.client_bet == 1}">
+                                            <td class="col-xs-4 bet"
+                                                ng-click="setBet(match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
+                                                ng-class="{active: match.bet.client_bet == 1}">
 
-                                              <span class="date" style="font-weight:bold; font-size:2em;">VS</span>
-                                              <br />
-                                              <span ng-bind="getTime(match.date)" class="date"></span>
-                                              <br/>
-                                              <span ng-bind="match.status.name"  class="status _{{match.status.id_status}}"></span>
+                                                <span class="date" style="font-size:2em;">
+                                                    <strong>VS</strong>
+                                                </span>
+                                                <br/>
+                                                <span ng-bind="getTime(match.date)"
+                                                      class="date"></span>
+                                                <br/>
+                                                <span ng-bind="match.status.name"
+                                                      class="status _{{match.status.id_status}}"></span>
+                                            </td>
 
-                                          </td>
-
-                                          <td style="width: 33% !important;"
-                                              class = "bet"
-                                              ng-click="setBet(match.status.id_status, 2, $parent.$parent.$index,$parent.$index,$index)"
-                                              ng-class="{active: match.bet.client_bet == 2}">
-                                              <span ng-bind="match.away_team.name"></span>
-                                              <br/>
-                                              <span ng-bind="match.away_team_goals" class="goal"></span>
-                                          </td>
-                                      </tr>
-                                      </tbody>
-                                  </table>
-                              </div>
-                          </div>	<!--container-->
-                      </div>	<!--scroller-->
-                  </div> <!--wrapper-->
-              </div> <!--row-->
-
+                                            <td class="col-xs-4 bet"
+                                                ng-click="setBet(match.status.id_status, 2, $parent.$parent.$index,$parent.$index,$index)"
+                                                ng-class="{active: match.bet.client_bet == 2}">
+                                                <span ng-bind="match.away_team.name"></span>
+                                                <br/>
+                                                <span ng-bind="match.away_team_goals" class="goal"></span>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>	<!--container-->
+                        </div>	<!--scroller-->
+                    </div> <!--wrapper-->
+                </div> <!--row-->
+                <div class="row" ng-show="league.empty">
+                    <div class="col-xs-12 news">
+                        <div class="no-content-panel" style="margin-top: 100px !important;">
+                            <i class="mdi-action-info-outline"></i>
+                            <div class="no-content-panel-title" translate>EMPTY_STATES.PREDICTIONS</div>
+                        </div>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
