FUTBOL BRASIL: Se quita el prefijo; No se debe colocar.

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -10,7 +10,7 @@
                                 <label for="msisdnInput" class="col-xs-2 control-label" translate>LOGIN.MSISDN_LABEL</label>
                                 <div class="col-xs-9 col-xs-push-1">
                                     <div class="input-group">
-                                        <span class="input-group-addon">+58</span>
+                                        <!--span class="input-group-addon">+58</span-->
                                         <label for="msisdnInput" class="col-xs-2 control-label sr-only"
                                                translate>LOGIN.MSISDN_LABEL</label>
                                         <input type="tel" class="form-control empty" ng-model="msisdn"
