--- a/ExtremeSports/server/ExtremeSports/app/views/categories/form.scala.html
+++ b/ExtremeSports/server/ExtremeSports/app/views/categories/form.scala.html
@@ -6,6 +6,21 @@
 
 @title = {}
 
+@localizationGroup(field: Field, className: String = "localization") = {
+    <div class="twipsies well @className">
+        <a class="removeLocalization btn btn-primary danger pull-right">@Messages("categories.localization.remove")</a>
+        @select(
+            field("language.idLanguage"),
+            models.basic.Language.toSeq,
+            '_label -> Messages("categories.localization.language"),
+            'class -> "form-control"
+        )
+        @input(field("name"), '_label -> Messages("categories.localization.name")) { (id, name, value, _) =>
+            <input type="text" name="@name" value="@value" class="form-control" >
+        }
+    </div>
+}
+
 @main(title = Messages(if(categories) "categories.create" else "tags.create"), nav = "create") {
 
     @if(flash.containsKey("success")) {
@@ -23,7 +38,7 @@
     }
 
 
-    @helper.form(action = controllers.routes.CategoriesView.submit(categories)) {
+    @helper.form(action = controllers.routes.CategoriesView.submit(categories), 'id -> "form") {
 
         <fieldset>
             <div class="row">
@@ -46,6 +61,22 @@
                 </div>
             </div>
 
+            <div id="localizations">
+
+                @repeat(categoryViewForm("localizations")) { localization =>
+                    @localizationGroup(localization)
+                }
+                @localizationGroup(
+                    categoryViewForm("localizations[x]"),
+                    className = "localization_template"
+                )
+
+                <div class="manage">
+                    <a class="addLocalization btn btn-primary success">@Messages("categories.localization.add")</a>
+                </div>
+
+            </div>
+
         </fieldset>
 
         <div class="actions">
@@ -54,5 +85,38 @@
         </div>
 
     }
+
+    <script type="text/javascript" charset="utf-8">
+
+        $(document).on('click','.removeLocalization', function(e) {
+            $(this).parents('.localization').remove()
+            renumberLocalizations()
+        })
+
+        $(document).on('click','.addLocalization', function(e) {
+            var template = $('.localization_template')
+            template.before('<div class="twipsies well localization">' + template.html() + '</div>')
+            renumberLocalizations()
+        })
+
+        var renumberLocalizations = function() {
+            $('.localization').each(function(i) {
+                $('select', this).each(function() {
+                    $(this).attr('name', $(this).attr('name').replace(/localizations\[.+?\]/g, 'localizations[' + i + ']'))
+                })
+                $('input', this).each(function() {
+                    $(this).attr('name', $(this).attr('name').replace(/localizations\[.+?\]/g, 'localizations[' + i + ']'))
+                })
+            })
+        }
+
+
+
+        $('#form').submit(function() {
+            $('.localization_template').remove()
+        })
+
+
+    </script>
 
 }
