--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -19,12 +19,12 @@
                         <div class="row" style="margin-top:50px !important;">
                             <div class="col-xs-6" >
                                 <span class="btn btn-success btn-filter-{{$index}} disabled"
-                                      ng-class="{'disabled': isActive('competition')}"
+                                      ng-class="{'disabled': isActive('competition{{$index}}')}"
                                       ng-click="showTournament()" translate>LEADERBOARD.TOURNAMENT</span>
                             </div>
                             <div class="col-xs-6" >
                                 <span class="btn btn-success btn-filter-{{$index}}"
-                                      ng-class="{'disabled': isActive('phase')}"
+                                      ng-class="{'disabled': isActive('phase{{$index}}')}"
                                       ng-click="showPhase()" translate>LEADERBOARD.PHASE</span>
                             </div>
                         </div>
